fix: SAMS-84 SAMS-82 SAMS-77 SAMS-74 SAMS-85 SAMS-75 SAMS-80

--- a/src/_includes/partials/footer.liquid
+++ b/src/_includes/partials/footer.liquid
@@ -47,7 +47,10 @@
     class="bg-blue-25 py-3"
     aria-label="Rechtlicher Abschnitt der Website"
   >
-    <p class="container px-4 py-3" aria-label="Rechte über die Inhalte">
+    <p
+      class="container max-w-7xl px-4 py-3"
+      aria-label="Rechte über die Inhalte"
+    >
       Texte und Inhalte verfügbar als
       <a
         href="https://creativecommons.org/licenses/by/3.0/de/"
@@ -58,7 +61,7 @@
       >, Illustrationen © Lea Scheidt
     </p>
     <nav
-      class="container mt-0 px-4 flex justify-between flex-wrap"
+      class="container max-w-7xl mt-0 px-4 flex justify-between flex-wrap"
       aria-label="Credits und rechtliche Links"
     >
       <span aria-label="Credits">© 2022 Technologiestiftung Berlin</span>
