--- a/src/_includes/partials/header.liquid
+++ b/src/_includes/partials/header.liquid
@@ -9,7 +9,7 @@
     <a
       href="/"
       aria-label="Hauptseite der Webseite"
-      class="opacity-100 transition-opacity hover:opacity-80 origin-left transform scale-90 sm:scale-100"
+      class="origin-left transform scale-90 sm:scale-100"
     >
       {% include 'partials/logo.liquid' %}
     </a>
@@ -18,7 +18,7 @@
         <li class="inline-flex gap-6" aria-label="Link im Hauptmenü">
           <a
             href="/module"
-            class="text-blue-100 font-bold md:text-lg opacity-100 transition-opacity hover:opacity-80"
+            class="text-blue-100 font-bold md:text-lg transition-colors hover:text-magenta-500"
             aria-label="Übersichtseite aller 8 Module zur agilen Behördenarbeit"
           >
             <span class="sm:inline hidden" aria-hidden="true">→</span> Module
@@ -31,7 +31,7 @@
         Ein Angebot des
         <a
           href="https://citylab-berlin.org"
-          class="opacity-100 transition-opacity hover:opacity-80"
+          class="text-white transition-colors hover:text-magenta-500"
           aria-label="Logo vom Projekt CityLAB Berlin, der Technologiestiftung Berlin"
         >
           {% include 'partials/citylab_logo_monochrome.liquid' %}
