--- a/src/_includes/partials/home_hero.liquid
+++ b/src/_includes/partials/home_hero.liquid
@@ -58,13 +58,13 @@
       >
         <a
           href="/module"
-          class="px-3 pt-1 pb-1 md:pb-2 bg-magenta-500 text-white text-base md:text-lg xl:text-xl text-center transition-colors hover:bg-magenta-400 focus:ring-white"
+          class="px-3 pt-1 pb-1 md:pb-2 font-bold bg-magenta-500 text-white text-base md:text-lg xl:text-xl text-center transition-colors hover:bg-white hover:text-magenta-500 focus:ring-white"
           aria-label="Link zu alle Module"
           >Direkt zu den Modulen</a
         >
         <a
           href="#intro"
-          class="px-3 pt-1 pb-1 md:pb-2 bg-white text-base md:text-lg xl:text-xl text-center transition-colors hover:text-magenta-500"
+          class="px-3 pt-1 pb-1 md:pb-2 bg-white text-base md:text-lg xl:text-xl text-center transition-colors hover:bg-magenta-500 hover:text-white"
           aria-label="Link zum nächsten Abschnitt: Die Einführung"
           >Mehr Informationen</a
         >
