--- a/src/_includes/partials/logo.liquid
+++ b/src/_includes/partials/logo.liquid
@@ -4,6 +4,7 @@
   height="30"
   viewBox="0 0 236 30"
   aria-label="Logo der Webseite ServiceAgent:innen"
+  class="main-logo"
 >
   <g fill="none" fill-rule="evenodd">
     <g fill-rule="nonzero" transform="translate(0 1)">
