--- a/src/_includes/partials/methods.liquid
+++ b/src/_includes/partials/methods.liquid
@@ -14,7 +14,7 @@
       {% endif %}
       <a
         href="{{ method.doc_path }}"
-        class="inline-block px-3 pt-1 pb-1 md:pb-2 bg-white text-blue-500 text-base md:text-lg xl:text-xl text-center transition-colors hover:text-magenta-500"
+        class="inline-block px-3 pt-1 pb-1 md:pb-2 bg-white text-blue-500 text-base md:text-lg xl:text-xl text-center transition-colors hover:bg-blue-500 hover:text-white focus:ring-blue-500"
         >Arbeitsblatt downloaden</a
       >
     </div>
