--- a/src/_includes/partials/support_cta.liquid
+++ b/src/_includes/partials/support_cta.liquid
@@ -50,7 +50,7 @@
       </p>
       <a
         href="mailto:info@citylab-berlin.org"
-        class="px-3 pt-1 pb-1 md:pb-2 bg-white text-blue-500 text-base md:text-lg lg:text-xl text-center transition-colors hover:text-magenta-500 focus:ring-blue-500"
+        class="px-3 pt-1 pb-1 md:pb-2 bg-white text-blue-500 text-base md:text-lg lg:text-xl text-center transition-colors hover:text-white hover:bg-blue-500 focus:ring-blue-500"
         aria-label="Kontakltieren Sie uns per E-Mail an info@citylab-berlin.org"
       >
         info@citylab-berlin.org
