--- a/src/_includes/partials/links_list.liquid
+++ b/src/_includes/partials/links_list.liquid
@@ -8,9 +8,11 @@
     {% for resource in further_reading %}
     <li class="group" aria-label="Link-Element “{{ resource.title }}}”">
       <a
-        class="group-odd:bg-blue-50 group-odd:bg-opacity-50 p-4 pr-16 sm:p-6 md:p-8 sm:text-lg md:text-xl grid grid-cols-1 md:grid-cols-[1fr,2fr] lg:grid-cols-[2fr,3fr,1fr] gap-2 sm:gap-8 transition group-hover:text-magenta-500 relative"
+        class="group-odd:bg-blue-50 group-odd:bg-opacity-50 group-hover:bg-magenta-500 group-hover:text-white p-4 pr-16 sm:p-6 md:p-8 sm:text-lg md:text-xl grid grid-cols-1 md:grid-cols-[1fr,2fr] lg:grid-cols-[2fr,3fr,1fr] gap-2 sm:gap-8 transition-colors relative"
         href="{{ resource.link }}"
         aria-label="Link zu: {{ resource.title }}"
+        target="_blank"
+        rel="noopener noreferrer"
       >
         <span>{{ resource.title }}</span>
         <span class="opacity-60 transition-opacity group-hover:opacity-100">{{
