--- a/src/_includes/partials/module_card.liquid
+++ b/src/_includes/partials/module_card.liquid
@@ -4,10 +4,10 @@ endcapture %}
 <a
   href="{{ href }}"
   aria-label="Link zu den Modul {{ fileSlug }}: {{ title }}"
-  class="grid grid-cols-[1fr_auto] md:grid-cols-[180px_1fr] lg:grid-cols-[224px_1fr] gap-0 pl-5 md:pl-0 pr-0 py-4 bg-blue-25 md:bg-transparent group focus:ring-0"
+  class="grid grid-cols-[1fr_auto] md:grid-cols-[180px_1fr] lg:grid-cols-[224px_1fr] gap-0 pl-5 md:pl-0 pr-0 py-4 bg-blue-25 md:bg-transparent group focus:ring-0 group"
 >
   <div
-    class="md:bg-blue-25 md:px-4 md:py-4 md:h-[204px] lg:h-[254px] md:relative group-focus:ring group-focus:ring-magenta-500 group-focus:ring-offset-0"
+    class="md:bg-blue-25 transition-colors md:group-hover:bg-magenta-500 md:group-hover:text-white md:px-4 md:py-4 md:h-[204px] lg:h-[254px] md:relative group-focus:ring group-focus:ring-magenta-500 group-focus:ring-offset-0"
     aria-label="Zusammenfassung der Modulinhalte"
   >
     <div class="hidden md:block md:absolute top-0 right-0" aria-hidden="true">
@@ -27,17 +27,17 @@ endcapture %}
       aria-label="Textinhalte der Zusammenfassung"
     >
       <h2
-        class="text-xl md:text-lg xl:text-2xl text-blue-500 flex flex-col gap-6"
+        class="text-xl md:text-lg xl:text-2xl text-blue-500 md:group-hover:text-white flex flex-col gap-6"
       >
         <span
-          class="text-[40px] md:text-[44px] xl:text-[56px] leading-[0.5] md:leading-[0.7] lg:leading-[0.6] xl:leading-[0.4] font-bold text-magenta-500"
+          class="text-[40px] md:text-[44px] xl:text-[56px] leading-[0.5] md:leading-[0.7] lg:leading-[0.6] xl:leading-[0.4] font-bold text-magenta-500 md:group-hover:text-white"
         >
           {{ module_number }}</span
         >
         <span class="block leading-7">{{ title }}</span>
       </h2>
       <p
-        class="mt-1 text-blue-300 text-base lg:text-sm xl:text-base lg:leading-tight xl:leading-tight"
+        class="mt-1 text-blue-300 md:group-hover:text-white text-base lg:text-sm xl:text-base lg:leading-tight xl:leading-tight"
         aria-label="Kurzbeschreibung des Moduls"
       >
         {{ abstract }}
@@ -46,5 +46,6 @@ endcapture %}
   </div>
   {% include 'partials/module_illustration.liquid' class: 'w-24 md:w-full
   md:order-first -translate-y-16 md:-translate-y-[28px] lg:-translate-y-[35px]'
-  module_number: module_number has_outline: is_on_blue image_alt: image_alt width: '800' height: '1362'  %}
+  module_number: module_number has_outline: is_on_blue image_alt: image_alt
+  width: '800' height: '1362' %}
 </a>
