--- a/src/_includes/partials/service-design.liquid
+++ b/src/_includes/partials/service-design.liquid
@@ -12,11 +12,18 @@
       <h2 class="text-3xl md:text-4xl max-w-[80%]">
         Service Design als Lösung
       </h2>
-      {% include 'partials/logo.liquid' %}
+      <a href="#" title="Zurück nach oben">
+        {% include 'partials/logo.liquid' %}
+      </a>
     </header>
     <div class="lg:grid lg:grid-cols-3 gap-4 md:gap-8 lg:gap-12 clear-left">
       <div class="flex items-center justify-center">
-        {% include 'partials/picture.liquid' directory: '/assets/images' file_name: 'screen' sizes: '400 800' image_alt: 'Abstrakte Illustration einer Person, die mit einem Screen interagiert' width: '236' height: '371' class: 'object-contain box-content max-h-full max-w-full pr-8 pb-8 float-left lg:float-none absolute sm:static top-8 right-4 origin-top-right scale-[0.2] sm:scale-100' %}
+        {% include 'partials/picture.liquid' directory: '/assets/images'
+        file_name: 'screen' sizes: '400 800' image_alt: 'Abstrakte Illustration
+        einer Person, die mit einem Screen interagiert' width: '236' height:
+        '371' class: 'object-contain box-content max-h-full max-w-full pr-8 pb-8
+        float-left lg:float-none absolute sm:static top-8 right-4
+        origin-top-right scale-[0.2] sm:scale-100' %}
       </div>
       <p class="mb-2 sm:mb-3 md:mb-4">
         Service Design arbeitet auf Grundlage des Nutzer:innen&shy;erlebnisses -
@@ -46,7 +53,7 @@
     aria-label="Details über die Umsetzung der Weiterbildung"
   >
     <summary
-      class="bg-blue-500 text-white px-8 py-3 sm:py-4 md:py-5 sm:text-xl md:text-2xl list-none flex justify-between items-center"
+      class="bg-blue-500 text-white px-8 py-3 sm:py-4 md:py-5 sm:text-xl md:text-2xl list-none flex justify-between items-center transition-colors hover:bg-magenta-500 cursor-pointer"
     >
       <span class="underline underline-offset-1 leading-5 pb-1 sm:pb-3"
         >Umsetzung in dieser Weiterbildung</span
