--- a/src/modules/index.liquid
+++ b/src/modules/index.liquid
@@ -9,10 +9,10 @@ layout: layouts/content.liquid
 ---
 
 <section
-  class="bg-blue-500 pt-14 pb-48 px-4 md:px-8"
+  class="bg-blue-500 pt-14 pb-48"
   aria-label="Einführungsabschnitt über alle Module"
 >
-  <div class="container max-w-7xl">
+  <div class="px-4 container max-w-7xl">
     <h1 class="text-2xl sm:text-3xl md:text-4xl text-white font-bold">
       {{ title }}
     </h1>
