--- a/src/_includes/partials/arrow_icon.liquid
+++ b/src/_includes/partials/arrow_icon.liquid
@@ -4,7 +4,7 @@
   height="24"
   viewBox="0 0 24 24"
   class="
-    rotate-0 scale-75 transition-transform will-change-transform
+    scale-75 transition-transform will-change-transform
     {% if class %}
       {{ class }}
     {% endif %}
