--- a/src/_includes/partials/methods.liquid
+++ b/src/_includes/partials/methods.liquid
@@ -11,12 +11,13 @@
       {% include 'partials/heading.liquid' content: method.title class:
       'text-white font-bold mb-1' %} {% if abstract %}
       <p class="mb-5 sm:text-lg xl:text-xl">{{ method.abstract }}</p>
-      {% endif %}
+      {% endif %} {% if method.doc_path %}
       <a
         href="{{ method.doc_path }}"
         class="inline-block px-3 pt-1 pb-1 md:pb-2 bg-white text-blue-500 text-base md:text-lg xl:text-xl text-center transition-colors hover:bg-blue-500 hover:text-white focus:ring-blue-500"
         >Arbeitsblatt downloaden</a
       >
+      {% endif %}
     </div>
     <p class="sm:text-lg xl:text-xl">
       {{ method.description }}
