--- a/src/_includes/layouts/base.liquid
+++ b/src/_includes/layouts/base.liquid
@@ -4,7 +4,7 @@
     {% if env.isProduction %}
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'none'; connect-src 'self'; img-src 'self' https://piwik.technologiestiftung-berlin.de; script-src 'self' https://piwik.technologiestiftung-berlin.de; style-src 'self'; font-src 'self'; manifest-src 'self'; object-src 'none';"
+      content="default-src 'none'; connect-src 'self'; img-src 'self' https://piwik.technologiestiftung-berlin.de; script-src 'self' https://piwik.technologiestiftung-berlin.de; style-src 'self'; font-src 'self'; manifest-src 'self'; object-src 'none'; media-src 'self';"
     />
     {% endif %}
     <meta charset="UTF-8" />
