style(SAMS-76): unify font-size and line-height of longer text sections

--- a/src/_includes/partials/home_hero.liquid
+++ b/src/_includes/partials/home_hero.liquid
@@ -45,7 +45,7 @@
       <h2 class="mt-2 text-blue-200 text-base md:text-lg xl:text-xl">
         So machen Sie Ihr Team fit für die Zukunft
       </h2>
-      <p class="mt-4 text-white text-base md:text-lg xl:text-xl max-w-xl">
+      <p class="mt-4 max-w-xl prose text-white sm:text-lg xl:text-xl">
         Digitale, agile und nutzer:innen-orientierte Prozesse sind wesentlich
         für den anstehenden Wandel in allen Bereichen des öffentlichen Lebens.
         Mit der Weiterbildung <i>ServiceAgent:innen</i> geben wir auf diese
