--- a/src/_includes/partials/introduction.liquid
+++ b/src/_includes/partials/introduction.liquid
@@ -5,24 +5,26 @@
   <div class="md:col-span-4">
     {% include 'partials/heading.liquid' content: 'Einführung' class: 'pb-3
     sm:pb-5 text-magenta-500' %}
-    <p>
-      Mitarbeiter:innen der Verwaltung sind heute oft ausführendes Organ des
-      Innovationsbestrebens und -drucks der öffentlichen Hand: Prozesse werden
-      umgestaltet und digitalisiert; es gilt nach Außen diverse Zielgruppen
-      anzusprechen und intern fach- und behördenübergreifend zusammenzuarbeiten.
-      Das benötigt Know-How und Methodenwissen.
-    </p>
-    <p class="mt-4">
-      Die Weiterbildung ist eine Möglichkeit, dieses Wissen zu erwerben und wird
-      hier in einem konzentrierten Überblick vorgestellt.
-    </p>
-    <p class="mt-4">
-      Ziel ist es,
-      <ul class="list-disc pl-6 prose" aria-label="Liste der Ziele">
-        <li>den Ansatz Service Design näher zu bringen und seine Werkzeuge zu erläutern,</li>
-        <li>und konkretes Wissen und Arbeitsmaterialien zur Verfügung zu stellen.</li>
-      </ul>
-    </p>
+    <div class="prose sm:text-lg xl:text-xl">
+      <p>
+        Mitarbeiter:innen der Verwaltung sind heute oft ausführendes Organ des
+        Innovationsbestrebens und -drucks der öffentlichen Hand: Prozesse werden
+        umgestaltet und digitalisiert; es gilt nach Außen diverse Zielgruppen
+        anzusprechen und intern fach- und behördenübergreifend zusammenzuarbeiten.
+        Das benötigt Know-How und Methodenwissen.
+      </p>
+      <p>
+        Die Weiterbildung ist eine Möglichkeit, dieses Wissen zu erwerben und wird
+        hier in einem konzentrierten Überblick vorgestellt.
+      </p>
+      <p>
+        Ziel ist es,
+        <ul class="pl-6" aria-label="Liste der Ziele">
+          <li>den Ansatz Service Design näher zu bringen und seine Werkzeuge zu erläutern,</li>
+          <li>und konkretes Wissen und Arbeitsmaterialien zur Verfügung zu stellen.</li>
+        </ul>
+      </p>
+    </div>
   </div>
   <div class="order-first md:order-last md:col-span-8" aria-label="Videoabschnitt">
     <div
