--- a/src/_includes/partials/service-design.liquid
+++ b/src/_includes/partials/service-design.liquid
@@ -25,7 +25,7 @@
         float-left lg:float-none absolute sm:static top-8 right-4
         origin-top-right scale-[0.2] sm:scale-100' %}
       </div>
-      <p class="mb-2 sm:mb-3 md:mb-4">
+      <p class="mb-2 sm:mb-3 md:mb-4 prose text-white sm:text-lg xl:text-xl">
         Service Design arbeitet auf Grundlage des Nutzer:innen&shy;erlebnisses -
         denn niemand kann besser Auskunft geben als die Personen, die einen
         Service von Anfang bis Ende mit echten Bedürfnissen oder auch Handicaps
@@ -42,7 +42,7 @@
         und damit im Grunde jede ganzheitliche Erfahrung, die wir machen, wenn
         wir einem Angebot der privaten oder öffentlichen Hand begegnen.
       </p>
-      <p class="mb-2 sm:mb-3 md:mb-4">
+      <p class="mb-2 sm:mb-3 md:mb-4 prose text-white sm:text-lg xl:text-xl">
         Die Arbeitsweise Service Design ist durch das Zusammenwirken ihrer
         Methoden und die entstehende Dramaturgie automatisch agil.
       </p>
@@ -64,7 +64,7 @@
       </span>
     </summary>
     <div class="bg-blue-50 bg-opacity-50 p-8">
-      <div class="prose">
+      <div class="prose sm:text-lg xl:text-xl">
         <p>
           <i>Service:Agentinnen</i> setzt bei diesem Dilemma an und führt
           Führungskräfte wie auch Verwaltungs&shy;mit&shy;arbeiter&shy;:innen in
