--- a/src/_includes/partials/support_cta.liquid
+++ b/src/_includes/partials/support_cta.liquid
@@ -44,7 +44,7 @@
     <div
       class="text-lg md:text-xl gap-8 flex flex-col items-start pt-6 leading-tight sm:leading-normal"
     >
-      <p class="max-w-[70%] sm:max-w-md sm:text-lg xl:text-xl">
+      <p class="max-w-[70%] sm:max-w-md prose text-white sm:text-lg xl:text-xl">
         Wenn Sie mehr zum Thema Service Design und zum agilen Arbeiten in
         Behörden erfahren möchten, melden Sie sich bei uns.
       </p>
