--- a/src/_includes/partials/herausforderung.liquid
+++ b/src/_includes/partials/herausforderung.liquid
@@ -2,7 +2,9 @@
 <h3 class="text-magenta-500 font-bold leading-tight mb-2 text-lg">
   {{ title }}
 </h3>
-{{ content }}
+<p class="prose">
+  {{ content }}
+</p>
 {% endcapture %}
 
 <li aria-label="Herausforderung: “{{ title }}”">
