--- a/src/_includes/partials/in_practice.liquid
+++ b/src/_includes/partials/in_practice.liquid
@@ -8,7 +8,7 @@
   >
     {% include 'partials/heading.liquid' content: 'In der Praxis: Die
     Pilot-Schulung 2021' class: 'pb-3 sm:pb-5 text-magenta-500 max-w-prose' %}
-    <p class="max-w-prose">
+    <p class="max-w-prose prose sm:text-lg xl:text-xl">
       Die Weiterbildung <i>Service:Agentinnen</i> ist ein vom CityLAB Berlin
       durchgeführtes Pilotprojekt. 16 Mitarbeiter:innen der Berliner Senats- und
       Bezirksverwaltung haben an realen Verwaltungs&shy;prozessen die Prinzipien
