--- a/src/modules/index.liquid
+++ b/src/modules/index.liquid
@@ -3,6 +3,7 @@ title: Die 8 Module
 socialMediaImagePath: /assets/images/overview-social-image.webp
 socialMediaImageType: image/webp
 socialMediaImageAlt: Die 8 Module unterteilt unter die 4 Komponente “Hintergrung”, “Beispiel”, “Methoden” und “Weitere Links”
+twitterImagePath: /assets/images/overview-social-image-twitter.webp
 permalink: /module/ # <- for German paths
 eleventyExcludeFromCollections: true
 layout: layouts/content.liquid
