--- a/src/_includes/partials/module_hero.liquid
+++ b/src/_includes/partials/module_hero.liquid
@@ -29,6 +29,7 @@
     {% include 'partials/module_illustration.liquid' module_number:
     page.fileSlug has_outline: true class: 'w-full sm:w-42 md:w-60 lg:w-72
     translate-y-16 {% if hypotheses %} sm:translate-y-24 md:translate-y-28 {%
-    else %} sm:translate-y-32 {% endif %} -mt-[50%]' image_alt: hero_image_alt width: "346" height: "584" %}
+    else %} sm:translate-y-32 {% endif %} -mt-[50%]' image_alt: hero_image_alt
+    width: "346" height: "584" %}
   </div>
 </section>
