--- a/src/index.liquid
+++ b/src/index.liquid
@@ -11,7 +11,14 @@ layout: /layouts/content.liquid
   {% include 'partials/service-design.liquid' %}
 </main>
 
-{% include 'partials/ersten_modul.liquid' %} {% include
-'partials/in_practice.liquid' %}
+{% include 'partials/modul_cta.liquid' title: "Gleich loslegen mit dem ersten
+Modul" module_number: "01" module_title: "Service Design und
+Nutzer:innen&shy;orientierung" module_link:
+"/module/service-design-und-nutzer:innenorientierung/" module_link_aria: "Zum
+ersten Modul Service Design und Nutzer:innenorientierung navigieren"
+module_abstract: "Service Design erzeugt gute Angebote, die Stress für
+Mitarbeiter:innen reduzieren, Geld sparen und Ressourcen freisetzen."
+module_illustration_alt: "Abstrakte Illustration zum Modul 1: Service Design und
+Nutzer:innenorientierung" %} {% include 'partials/in_practice.liquid' %}
 
 <script src="/assets/js/home.js"></script>
