--- a/src/_includes/layouts/module.liquid
+++ b/src/_includes/layouts/module.liquid
@@ -4,7 +4,12 @@ layout: layouts/content.liquid
 
 {% include 'partials/module_hero.liquid' %} {% include
 'partials/module_intro_hypotheses.liquid' %} {% include
-'partials/module_intro_text.liquid' %} {% include 'partials/example.liquid' module_number: page.fileSlug %}
-{% if methods %} {% include 'partials/methods.liquid' %} {% endif %}
-{% if further_reading %} {% include
-'partials/links_list.liquid' %} {% endif %}
+'partials/module_intro_text.liquid' %} {% include 'partials/example.liquid'
+module_number: page.fileSlug %} {% if methods %} {% include
+'partials/methods.liquid' %} {% endif %} {% if further_reading %} {% include
+'partials/links_list.liquid' %} {% endif %} {% include
+'partials/modul_cta.liquid' title: "Zum nächsten Modul" module_number:
+next_module.fileSlug module_title: next_module.title module_link:
+next_module.url module_link_aria: "Zum Modul '{{ next_module.title }}'
+navigieren" module_abstract: next_module.abstract module_illustration_alt:
+next_module.hero_image_alt %}
