--- a/src/_includes/partials/example.liquid
+++ b/src/_includes/partials/example.liquid
@@ -1,6 +1,6 @@
 {% capture image_directory %} /assets/images/modules/{{ module_number }}
-{% endcapture %} {% capture class %} container max-w-7xl my-8 sm:my-12 md:my-16
-p-4 py-8 sm:p-8 md:p-12 grid grid-cols-1 {% if example_image_alt %}
+{% endcapture %} {% capture exampleClass %} container max-w-7xl my-8 sm:my-12
+md:my-16 p-4 py-8 sm:p-8 md:p-12 grid grid-cols-1 {% if example_image_alt %}
 sm:grid-cols-[1fr,2fr] lg:grid-cols-[2fr,3fr,1fr] {% endif %} gap-8 sm:gap-12
 md:gap-16 items-center {% endcapture %} {% capture example %} {% if
 example_image_alt %} {% include 'partials/picture.liquid' directory:
@@ -13,4 +13,4 @@ endif %}
   <p class="prose sm:text-lg xl:text-xl">{{ example }}</p>
 </div>
 {% endcapture %} {% include 'partials/angle_block.liquid' content: example
-class: class ariaLabel: 'Beispiel Abschnitt des Moduls' %}
+class: exampleClass ariaLabel: 'Beispiel Abschnitt des Moduls' %}
