--- a/src/_includes/partials/module_illustration.liquid
+++ b/src/_includes/partials/module_illustration.liquid
@@ -1,6 +1,4 @@
-<figure
-  class="relative {% if class %}{{ class }}{% endif %}"
->
+<figure class="relative {% if class %}{{ class }}{% endif %}">
   <picture>
     <source
       srcset="/assets/images/modules/{{ module_number }}/hero-800.webp 800w"
@@ -28,7 +26,7 @@
       loading="lazy"
     />
   </picture>
-  {% if has_outline %}
-    {% include 'partials/module_illustration_outline.liquid' class: 'absolute top-0 left-0 w-full h-auto' module_number: module_number %}
+  {% if has_outline %} {% include 'partials/module_illustration_outline.liquid'
+  class: 'absolute top-0 left-0 w-full h-auto' module_number: module_number %}
   {% endif %}
 </figure>
