--- a/src/index.liquid
+++ b/src/index.liquid
@@ -21,4 +21,15 @@ Mitarbeiter:innen reduzieren, Geld sparen und Ressourcen freisetzen."
 module_illustration_alt: "Abstrakte Illustration zum Modul 1: Service Design und
 Nutzer:innenorientierung" %} {% include 'partials/in_practice.liquid' %}
 
+<section class="container max-w-7xl px-4 py-6 sm:py-8 md:py-16">
+  {% include 'partials/heading.liquid' content: 'Die Dozent:innen' class: 'pb-3
+  sm:pb-5 text-magenta-500 max-w-prose col-span-2' %}
+  <div
+    class="mt-4 md:mt-8 lg:mt-12 grid grid-cols-1 lg:grid-cols-2 gap-8 md:gap-0 lg:gap-8 xl:gap-16"
+  >
+    {% for teacher in teachers %} {% include 'partials/teacher_card.liquid' id:
+    teacher.id name: teacher.name bio: teacher.bio %} {% endfor %}
+  </div>
+</section>
+
 <script src="/assets/js/home.js"></script>
