feat(SAMS-90): update teacher_card

--- a/src/_includes/partials/teacher_card.liquid
+++ b/src/_includes/partials/teacher_card.liquid
@@ -16,15 +16,13 @@
         <polygon points="0 0 32 0 32 32" fill="currentColor" stroke-width="0" />
       </svg>
     </div>
-    <div class="flex flex-col gap-3">
-      <h2
-        class="text-xl md:text-lg xl:text-2xl text-magenta-500 md:group-hover:text-white flex flex-col gap-6"
-      >
+    <div class="flex flex-col gap-3" aria-label="Textinhalt der Dozentin">
+      <h2 class="text-xl md:text-lg xl:text-2xl text-magenta-500">
         {{ name }}
       </h2>
       <p
-        class="mt-1 text-blue-500 md:group-hover:text-white text-base lg:text-sm xl:text-base lg:leading-tight xl:leading-tight"
-        aria-label="Kurzbeschreibung des Moduls"
+        class="mt-0 text-blue-500 md:group-hover:text-white text-base lg:text-sm xl:text-base lg:leading-tight xl:leading-tight"
+        aria-label="Kurzbeschreibung der Dozentin"
       >
         {{ bio }}
       </p>
