chore(SAMS-91): apply text corrections

--- a/src/_includes/partials/introduction.liquid
+++ b/src/_includes/partials/introduction.liquid
@@ -9,7 +9,7 @@
       <p>
         Mitarbeiter:innen der Verwaltung sind heute oft ausführendes Organ des
         Innovationsbestrebens und -drucks der öffentlichen Hand: Prozesse werden
-        umgestaltet und digitalisiert; es gilt nach Außen diverse Zielgruppen
+        umgestaltet und digitalisiert; es gilt, nach außen diverse Zielgruppen
         anzusprechen und intern fach- und behördenübergreifend zusammenzuarbeiten.
         Das benötigt Know-How und Methodenwissen.
       </p>
