--- a/src/_includes/partials/service-design.liquid
+++ b/src/_includes/partials/service-design.liquid
@@ -31,14 +31,14 @@
         Service von Anfang bis Ende mit echten Bedürfnissen oder auch Handicaps
         durchlaufen.
         <span class="font-bold"
-          >Dies ist für keine Institution wichtiger als für die Verwaltung. Sie
+          >Dies ist für keine Institution so wichtig wie für die Verwaltung. Sie
           hat die größte und vielfältigste Zielgruppe, die zudem darauf
           angewiesen ist, die angebotenen Dienstleistungen zu nutzen.</span
         >
         <br />
         <br />
         Service Design ist eine junge, oft noch unbekannte Designdisziplin. Wie
-        der Name sagt, gestaltet Service Design Prozesse und Dienstleistungen
+        der Name besagt, gestaltet Service Design Prozesse und Dienstleistungen
         und damit im Grunde jede ganzheitliche Erfahrung, die wir machen, wenn
         wir einem Angebot der privaten oder öffentlichen Hand begegnen.
       </p>
