--- a/src/_includes/partials/introduction.liquid
+++ b/src/_includes/partials/introduction.liquid
@@ -27,38 +27,10 @@
     </div>
   </div>
   <div class="order-first md:order-last md:col-span-8" aria-label="Videoabschnitt">
-    <div
-      id="video-placeholder"
-      class="aspect-video relative grid bg-blue-25 group text-magenta-500 hover:text-blue-500"
-      role="button"
-      aria-label="Einführungsvideo abspielen"
-    >
-      <img
-        src="/assets/images/video-placeholder.webp"
-        alt="Platzhalterbild für die Einführungsvideo"
-        class="object-cover w-full h-full"
-        width="750"
-        height="422"
-        aria-label="Vorschau-Bild des Videos"
-      />
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="92"
-        height="92"
-        viewBox="0 0 92 92"
-        class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2"
-        aria-label="Play-Button Symbol"
-      >
-        <circle
-          cx="46"
-          cy="46"
-          r="46"
-          fill="currentColor"
-          class="transition-colors"
-        />
-        <polygon fill="#FFF" points="36 25 36 67.007 64.019 46.004" />
-      </svg>
-    </div>
+    <video class="aspect-video" controls>
+      <source src="/assets/videos/introduction.webm" type="video/webm" />
+      <source src="/assets/videos/introduction.mp4" type="video/mp4" />
+    </video>
     <div class="bg-blue-50 bg-opacity-50 py-3 px-4" aria-label="Video-Zusammenfassung">
       <p class="max-w-prose">
         Rückblick auf die erste ServiceAgent:innen-Schulung 2021. (06:01 min)
